dark mode fixed for forms

--- a/darkmode.css
+++ b/darkmode.css
@@ -74,3 +74,12 @@ svg, .MuiSvgIcon-root {
 hr, .MuiDivider-root {
     border-color: #333 !important;
 }
+
+.jss45  {
+    background-color: #2c2c2c !important;
+    color: #ffffff !important;
+}
+
+.MuiFormLabel-root, .jss78 {
+    color: #ffffff !important;
+}
